Fix StudiosCarousel layout shift

--- a/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
+++ b/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   position: relative;
   .studios-carousel {
-    min-height: 350px;
+    min-height: 310px;
   }
 
   .swiper_wrap {
